# ci-overview

./: .gitignore  README.md  pyproject.toml
src/ci_overview/: api_client.py  checks.py  http.py  overview.py  pull_requests.py  terminal.py
